# vulkan-playground

./: .clang-format  .gitattributes  CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/include/engine/: application.h  buffer.h  camera.h  device.h  graphics_pipeline.h  math.h  mesh.h  model.h  renderer.h  swap_chain.h  texture.h  transform.h  uniforms.h  utils.h  vertex.h  window.h
engine/include/engine/systems/: model_render_system.h  point_light_render_system.h
engine/include/engine/textures/: texture.h
engine/src/: application.cpp  buffer.cpp  camera.cpp  device.cpp  graphics_pipeline.cpp  mesh.cpp  model.cpp  renderer.cpp  swap_chain.cpp  texture.cpp  transform.cpp  utils.cpp  vertex.cpp  window.cpp
engine/src/systems/: model_render_system.cpp  point_light_render_system.cpp
engine/src/textures/: texture.cpp
shaders/: model.frag  model.vert  point_light.frag  point_light.vert  triangle.vert
